--- a/MediaPipeDemo.uproject
+++ b/MediaPipeDemo.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.27",
+	"EngineAssociation": "{569E5D9F-4436-AD95-FAF7-E783E6D2286D}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
