--- a/Plugins/MediaPipe/MediaPipe.uplugin
+++ b/Plugins/MediaPipe/MediaPipe.uplugin
@@ -1,14 +1,14 @@
 {
   "FileVersion": 3,
   "Version": 1,
-  "EngineVersion": "4.27.0",
+  "EngineVersion": "{569E5D9F-4436-AD95-FAF7-E783E6D2286D}",
   "VersionName": "0.1",
   "FriendlyName": "MediaPipe",
   "Description": "Unreal MediaPipe integration",
   "CreatedBy": "wongfei",
   "CreatedByURL": "https://github.com/wongfei",
   "DocsURL": "",
-  "MarketplaceURL" : "",
+  "MarketplaceURL": "",
   "Category": "Media",
   "CanContainContent": true,
   "Installed": true,
